Fix(style): fixed border-box issue on IE

--- a/src/styles/image-box.scss
+++ b/src/styles/image-box.scss
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
 
     &, * {
-        box-sizing: initial;
+        box-sizing: content-box;
     }
 
     &__box-container {
